Fix spacing on "my groups" link

--- a/app/assets/stylesheets/modnets/lvl2_skin.css.scss
+++ b/app/assets/stylesheets/modnets/lvl2_skin.css.scss
@@ -187,4 +187,8 @@ div#header_container {
 	#savesearch_link {
 		font-size: inherit;
 	}
+	.create-group-links {
+		margin-left: 8px;
+		margin-top: 8px;
+	}
 }
